--- a/src/LTM.Barramento/Web.config
+++ b/src/LTM.Barramento/Web.config
@@ -17,7 +17,7 @@
     <add key="MongoBase" value="LTM" />
   </appSettings>
   <connectionStrings>
-    <add name="AuthContext" connectionString="Server=localhost\SQLEXPRESS;Database=master;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="AuthContext" connectionString="Server=localhost\SQLEXPRESS;Database=LTM_Auth;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
