--- a/src/LTM.Infra.Repository/LTM.Infra.Repository.csproj
+++ b/src/LTM.Infra.Repository/LTM.Infra.Repository.csproj
@@ -105,12 +105,21 @@
     <Compile Include="Context\Context.cs" />
     <Compile Include="Context\ContextOAuth.cs" />
     <Compile Include="Context\NoSqlContext.cs" />
+    <Compile Include="Migrations\201711091915522_inicio.cs" />
+    <Compile Include="Migrations\201711091915522_inicio.Designer.cs">
+      <DependentUpon>201711091915522_inicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Core\OAuth\OAuthRepository.cs" />
     <Compile Include="Repositories\Core\RepositoryBase.cs" />
     <Compile Include="Repositories\Produto\ProdutoRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201711091915522_inicio.resx">
+      <DependentUpon>201711091915522_inicio.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
