--- a/src/LTM.UnitTest/app.config
+++ b/src/LTM.UnitTest/app.config
@@ -9,7 +9,7 @@
     <add key="MongoBase" value="LTM" />
   </appSettings>
   <connectionStrings>
-    <add name="AuthContext" connectionString="Data Source=.\SQLExpressLocal;Initial Catalog=AngularJSAuth;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="AuthContext" connectionString="Server=localhost\SQLEXPRESS;Database=LTM_Auth;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
